13748 ypcmd: variable may be used uninitialized Reviewed by: C Fraire <cfraire@me.com> Approved by: Dan McDonald <danmcd@joyent.com>